# wgpu_learn_01

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/camera/: controller.rs  mod.rs  uniform.rs
src/model/: instance.rs  light.rs  mod.rs  resources.rs  texture.rs
src/state/: mod.rs  renderer.rs
